feat(not-found): add not found page

--- a/my-nextjs-app/src/locales/ar.json
+++ b/my-nextjs-app/src/locales/ar.json
@@ -1,5 +1,7 @@
 {
-    "welcome": "مرحبا",
-    "description": "هذا هو الإصدار العربي."
-  }
-  
+  "welcome": "مرحبًا",
+  "description": "هذا هو الوصف.",
+  "notFoundTitle": "الصفحة غير موجودة",
+  "notFoundDescription": "عذرًا، الصفحة التي تبحث عنها غير موجودة أو تم نقلها.",
+  "goToHomepage": "العودة إلى الصفحة الرئيسية"
+}
