--- a/my-nextjs-app/src/locales/en.json
+++ b/my-nextjs-app/src/locales/en.json
@@ -1,5 +1,7 @@
 {
-    "welcome": "Welcome",
-    "description": "This is the English version."
-  }
-  
+  "welcome": "Welcome",
+  "description": "This is a description.",
+  "notFoundTitle": "Page Not Found",
+  "notFoundDescription": "Sorry, the page you are looking for does not exist or has been moved.",
+  "goToHomepage": "Go to Homepage"
+}
