--- a/my-nextjs-app/src/locales/en.json
+++ b/my-nextjs-app/src/locales/en.json
@@ -3,5 +3,6 @@
   "description": "This is a description.",
   "notFoundTitle": "Page Not Found",
   "notFoundDescription": "Sorry, the page you are looking for does not exist or has been moved.",
-  "goToHomepage": "Go to Homepage"
+  "goToHomepage": "Go to Homepage",
+  "myWebsite": "My Website"
 }
