--- a/my-nextjs-app/src/locales/en.json
+++ b/my-nextjs-app/src/locales/en.json
@@ -4,5 +4,6 @@
   "notFoundTitle": "Page Not Found",
   "notFoundDescription": "Sorry, the page you are looking for does not exist or has been moved.",
   "goToHomepage": "Go to Homepage",
-  "myWebsite": "My Website"
+  "myWebsite": "My Website",
+  "errorLoadingPosts": "Error loading posts."
 }
