--- a/my-nextjs-app/src/locales/en.json
+++ b/my-nextjs-app/src/locales/en.json
@@ -5,5 +5,8 @@
   "notFoundDescription": "Sorry, the page you are looking for does not exist or has been moved.",
   "goToHomepage": "Go to Homepage",
   "myWebsite": "My Website",
-  "errorLoadingPosts": "Error loading posts."
+  "errorLoadingPosts": "Error loading posts.",
+  "errorLoadingPost": "Error loading the post details",
+  "postNotFound": "Post not found",
+  "backToPosts": "Back to Posts"
 }
